--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,21 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-brand">
+        <%= link_to "Let's Do", root_path %>
+      </div>
+     
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Home",   '#' %></li>
+            <li><%= link_to "New",  new_place_path %></li>
+            <li><%= link_to "Log in", '#' %></li>
+          </ul>
+     
+    </div>
+    
+  </nav>
 
 <%= yield %>
 
