--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,51 +1,23 @@
 <p id="notice"><%= notice %></p>
+<div class="col-md-6 col-md-offset-3">
+  <h1>Listing places</h1>
+  
+  
+  
+  <% @places.each do |place| %>
+  
+    <div class="box panel panel-default">
+      <%= place.title %><br>
+      <%= place.s_description %><br>
+      <%= link_to 'Show', place %>
+      <%= link_to 'Edit', edit_place_path(place) %>
+      <%= link_to 'Destroy', place, method: :delete,
+                                       data: { confirm: 'Are you sure?' } %>
+    </div>
+  <% end %>
+  
+  
+  <br>
 
-<h1>Listing Places</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>S description</th>
-      <th>L description</th>
-      <th>Cost</th>
-      <th>Address</th>
-      <th>Phone</th>
-      <th>Outdoor</th>
-      <th>Website</th>
-      <th>Picture</th>
-      <th>Min age</th>
-      <th>Verified</th>
-      <th>L time</th>
-      <th>Op hours</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @places.each do |place| %>
-      <tr>
-        <td><%= place.title %></td>
-        <td><%= place.s_description %></td>
-        <td><%= place.l_description %></td>
-        <td><%= place.cost %></td>
-        <td><%= place.address %></td>
-        <td><%= place.phone %></td>
-        <td><%= place.outdoor %></td>
-        <td><%= place.website %></td>
-        <td><%= place.picture %></td>
-        <td><%= place.min_age %></td>
-        <td><%= place.verified %></td>
-        <td><%= place.l_time %></td>
-        <td><%= place.op_hours %></td>
-        <td><%= link_to 'Show', place %></td>
-        <td><%= link_to 'Edit', edit_place_path(place) %></td>
-        <td><%= link_to 'Destroy', place, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Place', new_place_path %>
+</div>
