--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Place</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @place %> |
-<%= link_to 'Back', places_path %>
+<div class="col-md-6 col-md-offset-3">
+    <h1>Editing Place</h1>
+    <%= render 'form' %>
+    
+    <%= link_to 'Show', @place %> |
+    <%= link_to 'Back', places_path %>
+</div>
