added paperclip and imagemagick

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       </div>
      
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home",   '#' %></li>
+            <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "New",  new_place_path %></li>
             <li><%= link_to "Log in", '#' %></li>
           </ul>
