--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,6 +1,7 @@
 
 <div class="col-md-6 col-md-offset-3">
     <h1>Editing Place</h1>
+    <%= image_tag @place.image.url(:medium) %>
     <%= render 'form' %>
     
     <%= link_to 'Show', @place %> |
