--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,5 +1,8 @@
+<div class="col-md-6 col-md-offset-3">
 <p id="notice"><%= notice %></p>
 
+
+<%= image_tag @place.image.url(:medium) %>
 <p>
   <strong>Title:</strong>
   <%= @place.title %>
@@ -41,11 +44,6 @@
 </p>
 
 <p>
-  <strong>Picture:</strong>
-  <%= @place.picture %>
-</p>
-
-<p>
   <strong>Min age:</strong>
   <%= @place.min_age %>
 </p>
@@ -67,3 +65,5 @@
 
 <%= link_to 'Edit', edit_place_path(@place) %> |
 <%= link_to 'Back', places_path %>
+
+</div>
