--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -39,8 +39,9 @@ body {
 }
 
 .box {
+  width: 25%;
   margin: 5px;
-  padding: 5px;
+  padding: 0 0 5px 0;
   background: #D8D5D2;
   font-size: 11px;
   line-height: 1.4em;
@@ -58,6 +59,7 @@ body {
 .box img {
   display: block;
   width: 100%;
+  
 }
 
 .col1 { width: 80px; }
@@ -76,3 +78,4 @@ body {
 .clearfix:before, .clearfix:after { content: ""; display: table; }
 .clearfix:after { clear: both; }
 .clearfix { zoom: 1; }
+
