made buttons responsive

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,14 +6,15 @@
 <div class="container button-group">
 
 
-<div class="col-xs-3">
+<div>
   <button class="button filter" data-filter="all">show all</button>
   <button class="button filter" data-filter=".indoor">indoor</button>
   <button class="button filter" data-filter=".outdoor">outdoor</button>
 
 </div>
+<div class="col-xs-1"></div>
 
-<div class="col-xs-3">
+<div>
   <button class="button sort" data-sort="myorder:asc">Asc</button>
   <button class="button sort" data-sort="myorder:desc">Desc</button>
 </div>
