--- a/app/assets/stylesheets/isotope.css
+++ b/app/assets/stylesheets/isotope.css
@@ -22,19 +22,20 @@
   color: #222;
 }
 
-.button:active,
+.button.active,
 .button.is-checked {
   background-color: #28F;
 }
 
-.button.is-checked {
+.button.active {
   color: white;
   text-shadow: 0 -1px hsla(0, 0%, 0%, 0.8);
 }
 
-.button:active {
+.button.active {
   box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
 }
+
 
 /* ---- button-group ---- */
 
@@ -57,4 +58,23 @@
 
 #Container .mix{
 	display: none;
+}
+
+
+  
+@media (max-width: 768px) {
+  .button {
+    padding:2px 4px;
+    font-size:80%;
+    line-height: 1;
+    border-radius:3px;
+  }
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+  .button {
+    padding:4px 9px;
+    font-size:90%;
+    line-height: 1.2;
+  }
 }
