--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
 <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-brand">
@@ -16,7 +17,24 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "New",  new_place_path %></li>
-            <li><%= link_to "Log in", '#' %></li>
+            <% if user_signed_in? %>
+              <li>
+              <%= link_to('Edit registration', edit_user_registration_path) %>
+              </li>
+            <% else %>
+              <li>
+              <%= link_to('Register', new_user_registration_path)  %>
+              </li>
+            <% end %>
+            <% if user_signed_in? %>
+              <li>
+              <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+              </li>
+            <% else %>
+              <li>
+              <%= link_to('Login', new_user_session_path)  %>  
+              </li>
+            <% end %>
           </ul>
      
     </div>
