--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,8 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 /**** Base styles ****/
 nav#page-nav {
@@ -25,6 +27,10 @@ nav#page-nav {
 
 body {
   overflow-y: scroll;
+}
+
+i {
+  margin: 10px 2px 0 2px;
 }
 
 #container {
