--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the places controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.cards {
+    
+    padding: 5px 5px 0 5px;
+    font-weight: bold;
+    font-size: 1.5em;
+}
+
+    
+.cost {
+    float: right;
+    font-weight: normal;
+}
