--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,9 +1,12 @@
-
-<div class="col-md-6 col-md-offset-3">
-    <h1>Editing Place</h1>
-    <%= image_tag @place.image.url(:medium) %>
-    <%= render 'form' %>
-    
-    <%= link_to 'Show', @place %> |
-    <%= link_to 'Back', places_path %>
-</div>
+<% if user_signed_in? && current_user.email == "acevedo.oliver@gmail.com" %>
+    <div class="col-md-6 col-md-offset-3">
+        <h1>Editing Place</h1>
+        <%= image_tag @place.image.url(:medium) %>
+        <%= render 'form' %>
+        
+        <%= link_to 'Show', @place %> |
+        <%= link_to 'Back', places_path %>
+    </div>
+<% else %>
+<h2>Sorry, you don't have rights to edit.</h2>
+<% end %>
