--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,8 +24,16 @@
             <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "New",  new_place_path %></li>
             <% if user_signed_in? %>
-              <li>
-              <%= link_to('Edit registration', edit_user_registration_path) %>
+              <li class="dropdown">
+              <%= link_to('Account', edit_user_registration_path) %>
+                <ul class="dropdown-menu sub-menu">
+                  <li>
+                    <%= link_to('Edit Registration', edit_user_registration_path) %>
+                  </li>
+                  <li>
+                    <%= link_to('Pending Requests', places_pending_path) %>
+                  </li>
+                </ul>
               </li>
             <% else %>
               <li>
