--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -34,7 +34,7 @@
       <% else %>
     <div class="mix box panels panel-default" data-myorder="<%= place.title %>">      
       <% end %>
-      
+      <% if place.verified == true %>
         <%= link_to (image_tag place.image.url(:medium)), place %>
         <div class="cards">
           <p><%= place.title %></p>
@@ -46,7 +46,6 @@
             <% else %>
             $<%= place.cost %>
             <% end %>
-           
           </div>
           
           
@@ -57,6 +56,7 @@
                                              data: { confirm: 'Are you sure?' } %> -->
           
         </div>
+      <% end %>
     </div>
   <% end %>
 </div>
