--- a/app/views/places/_form.html.haml
+++ b/app/views/places/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for(@place, multipart: true) do |f|
+= simple_form_for(@place) do |f|
   - if @place.errors.any?
     #error_explanation
       %h2
@@ -9,7 +9,7 @@
           %li= message
 
   .form-group
-    = f.input :img, input_html: { class: 'form-control'}
+    = f.input :image, input_html: { class: 'form-control'}
     
   .form-group
     = f.input :title, input_html: { class: 'form-control'}
