--- a/app/views/places/_form.html.haml
+++ b/app/views/places/_form.html.haml
@@ -9,7 +9,7 @@
           %li= message
 
   .form-group
-    = f.input :image, input_html: { class: 'form-control'}
+    = f.file_field :picture, input_html: { class: 'form-control'}
     
   .form-group
     = f.input :title, input_html: { class: 'form-control'}
