--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,7 +2,7 @@
 <p id="notice"><%= notice %></p>
 
 
-<%= image_tag @place.image.url(:medium) %>
+<%= image_tag (@place.picture_url) %>
 <p>
   <strong>Title:</strong>
   <%= @place.title %>
