--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -42,9 +42,9 @@
           <div class="col-md-6"></div>
           <div class="col-md-3 cost">
             <% if user_signed_in? == true %>
-            $<%= place.cost * current_user.adult%> 
+            <%= number_to_currency(place.cost) * current_user.adult%> 
             <% else %>
-            $<%= place.cost %>
+            <%= number_to_currency(place.cost) %>
             <% end %>
           </div>
           
