--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Place</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', places_path %>
+<div class="col-md-6 col-md-offset-3">
+    <%= render 'form' %>
+    <%= link_to 'Back', places_path %>
+</div>
