added maps to each places page

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -63,6 +63,10 @@
   <%= @place.op_hours %>
 </p>
 
+<div id="map-container">
+  <div id="map-canvas"></div>
+</div>
+
 <% if user_signed_in? && current_user.email == "acevedo.oliver@gmail.com" %>
   <%= link_to 'Edit', edit_place_path(@place) %> |
 <% end %>
