distance API working

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -63,6 +63,16 @@
   <%= @place.op_hours %>
 </p>
 
+<p>
+  <strong>Travel Time:</strong>
+  <%= @time %>
+</p>
+
+<p>
+  <strong>Travel Distance:</strong>
+  <%= @distance %>
+</p>
+
 <div id="map-container">
   <div id="map-canvas"></div>
 </div>
