--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,3 +1,7 @@
+<script type="text/javascript">
+    address = '<%= @place.address %>';
+</script>
+
 <div class="col-md-6 col-md-offset-3">
 <p id="notice"><%= notice %></p>
 
