Move logic to Model, create separate methods in Model responsible for calculating distance and time

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -69,12 +69,12 @@
 
 <p>
   <strong>Travel Time:</strong>
-  <%= @t_time %>
+  <%= @place.calc_time %>
 </p>
 
 <p>
   <strong>Travel Distance:</strong>
-  <%= @distance %>
+  <%= @place.calc_distance %>
 </p>
 
 <div id="map-container">
